--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ layout: default
   <section>
     <h2>{{ category[0] | replace:"/":"<em> / </em>" }}</h2>
     {% for post in category[1] %}
-      <a href="{{ post.url }}" class="project">
-        <img src="{{ post.image }}" />
+      <a href="{{ post.url }}" class="project" style="background-image: url('{{ post.image }}')">
         <h3>{{ post.title }}</h3>
       </a>
     {% endfor %}
