--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <h2>{{ category[0] | replace:"/":"<em> / </em>" }}</h2>
     {% for post in category[1] %}
       <a href="{{ post.url }}" class="project" style="background-image: url('{{ post.image }}')">
-        <h3>{{ post.title }}</h3>
+        <h3><img src="{{ post.icon }}"> {{ post.title }}</h3>
       </a>
     {% endfor %}
   </section>
