--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ layout: default
 	c0.894,0.289,1.826,0.289,2.721,0l0.06-0.021l0.063-0.014c4.732-1.091,9.631-1.21,14.48-0.945c6.124,0.488,11.42,3.662,16.353,7.065
 	l2.166,1.495l-2.412,1.051c-4.991,2.179-10.61,1.863-15.873,0.979C63.267,88.331,60.706,86.859,58.127,85.581L58.127,85.581z"></path></svg>
         {% endif %}
-	{% if post.org %}
-	<h3><img src="{{ post.orgicon }}"> {{ post.title }}</h3>
+	{% if post.banner %}
+	<h3><img src="{{ post.bannerimg }}"> {{ post.title }}</h3>
 	{% endif %}
       </a>
     {% endfor %}
