--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 	l2.166,1.495l-2.412,1.051c-4.991,2.179-10.61,1.863-15.873,0.979C63.267,88.331,60.706,86.859,58.127,85.581L58.127,85.581z"></path></svg>
         {% endif %}
 	{% if post.banner %}
-	<h3><img src="{{ post.bannerimg }}"> {{ post.title }}</h3>
+	<banner><img src="{{ post.bannerimg }}"></banner>
 	{% endif %}
       </a>
     {% endfor %}
